modified:   .gitignore 	modified:   docs/final_report.pdf 	modified:   docs/final_report.tex

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ desktop.ini
 
 # PDFs in root (reference papers, not project output)
 /*.pdf
+Presentation/GBRT Implementation for Screening of Li Conducting Materials.pptx
